2.95 (unreleased)
-----------------

- Nothing changed yet.


2.94 (2019-01-13)
-----------------

- Move running of flower into a separate docker instance.
- Add build scripts for simchatflower


2.93 (2019-01-13)
-----------------

- Add setting up of broadcast exchange back to the celery code.


2.92 (2019-01-13)
-----------------

- Add handling for file names that contain non-unicode characters.
- Bump meitrack lib to bring in low level fixes for file names with non-unicode characters.


2.91 (2018-12-17)
-----------------

- Expose flower to manage celery.


2.90 (2018-12-17)
-----------------

- Add some more event log messages to the firmware download process.


2.89 (2018-12-01)
-----------------

- Bump geotool api library version to bring in possible fix for current status not being updated.


2.88 (2018-12-01)
-----------------

- Fix queue names for current io pin status messages
- Bump geotool db to bring in fix for invalid analogue function definition.


2.87 (2018-12-01)
-----------------

- Add new processor for handling current io status through the message queue interface.
- Bump geotool api and geotool db api to bring in new io status functionality.


2.86 (2018-11-18)
-----------------

- Don't register stdin with epoll.


2.85 (2018-11-18)
-----------------

- Add ability to specify port through environmental variable SCS_PORT.


2.84 (2018-11-17)
-----------------

- Add celery sqs plugin to dependencies.
- Update geotool and geotool-db dependencies to remove pycrypto references.


2.83 (2018-10-21)
-----------------

- Bump version of meitrack lib to bring in unit tested functionality.


2.82 (2018-10-14)
-----------------

- Don't add files reported by event 39 to the list of files that we need to download. Files are automatically sent to the head end.
- Increase file fragment timeout to 120s as it was sometimes getting triggered for a file that the device was still sending. Was 60s.